# lz-str-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  LICENSE.md  Makefile  README.md  crates.js  deny.toml  help.html  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: Bindings.yml  Build.yml  Doc.yml  Js.yml  Rust.yml  Rustdoc.yml
benches/: compress.rs  decompress.rs
bindings/lz-str-js/: Cargo.toml
bindings/lz-str-js/src/: lib.rs
bindings/lz-str-py/: Cargo.toml  pyproject.toml
bindings/lz-str-py/src/: lib.rs
bindings/lz-str-wasm/: Cargo.toml  README.md  inject-inline-js.py
bindings/lz-str-wasm/binding-tests/: package-lock.json  package.json
bindings/lz-str-wasm/src/: inline.js  lib.rs
examples/: basic.rs  binary-data.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compress_decompress.rs
implementors/lz_str/: trait.IntoWideIter.js
js-test/: .gitignore  bench.js  package-lock.json  package.json
js-test/test/: bench.js  test.js
js-tests/: package.json  server.js
js-tests/public/: index.html
lz_str/: all.html  fn.compress.html  fn.compress_internal.html  fn.compress_to_base64.html  fn.compress_to_encoded_uri_component.html  fn.compress_to_uint8_array.html  fn.compress_to_utf16.html  fn.decompress.html  fn.decompress_from_base64.html  fn.decompress_from_encoded_uri_component.html  fn.decompress_from_uint8_array.html  fn.decompress_from_utf16.html  fn.decompress_internal.html  index.html  sidebar-items.js  trait.IntoWideIter.html
lz_str/compress/: fn.compress.html  fn.compress_internal.html  fn.compress_to_base64.html  fn.compress_to_encoded_uri_component.html  fn.compress_to_uint8_array.html  fn.compress_to_utf16.html
lz_str/decompress/: fn.decompress.html  fn.decompress_from_base64.html  fn.decompress_from_encoded_uri_component.html  fn.decompress_from_uint8_array.html  fn.decompress_from_utf16.html  fn.decompress_internal.html
lz_str_py/: all.html  fn.compress_to_base64.html  fn.decompress_from_base64.html  index.html  sidebar-items.js
lz_str_wasm/: all.html  fn.compress.html  fn.decompress.html  index.html  sidebar-items.js
reference/: lz-string-1.0.2.js  test.html
scripts/: build-wasm-profiling.bat  build-wasm.bat
src/: compress.rs  constants.rs  decompress.rs  lib.rs  wasm.rs  wasm_bindgen_support.rs
src/compress/: context.rs
src/decompress/: context.rs
src/lz_str/: compress.rs.html  constants.rs.html  decompress.rs.html  lib.rs.html
src/lz_str_py/: lib.rs.html
src/lz_str_wasm/: lib.rs.html
test_data/: long_compressed_js.txt
tests/: common.rs  common_legacy.rs  compression_tests_raw.rs  invalid_inputs.rs  lz-string.js  lz_string_spec_port.rs  smoke.rs  valid_inputs.rs
trait.impl/lz_str/: trait.IntoWideIter.js
