[package]
name = "lz-str"
version = "0.1.0"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
description = "A port of lz-string to Rust"
repository = "https://github.com/adumbidiot/lz-str-rs"
homepage = "https://github.com/adumbidiot/lz-str-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [ "lz-string", "compression" ]
categories = [ "compression" ]

exclude = [
    "scripts/*",
    "js-test/*",
    ".github/*",
]

[dependencies]

[dev-dependencies]
rand = "0.8.3"
criterion = "0.4.0"

[features]
# This is currently only used for benchmarking.
nightly = [ "criterion/real_blackbox" ]

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "decompress"
harness = false

[workspace]
members = [
    "bindings/*",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1