[package]
name = "lz-str"
version = "0.2.1"
authors = [ "adumbidiot <nathaniel.daniel23@outlook.com>" ]
edition = "2018"
description = "A port of lz-string to Rust"
repository = "https://github.com/adumbidiot/lz-str-rs"
homepage = "https://github.com/adumbidiot/lz-str-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = [ "lz-string", "compression" ]
categories = [ "compression" ]

exclude = [
    "scripts/*",
    "js-test/*",
    ".github/*",
    "Makefile",
    "deny.toml",
    "bindings",
    "fuzz/*",
    "test_data/*",
]

[dependencies]
rustc-hash = { version = "1.1.0", optional = true }

[dev-dependencies]
rand = "0.8.3"
criterion = "0.5.1"

[features]
# This is currently only used for benchmarking.
nightly = [ "criterion/real_blackbox" ]

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "decompress"
harness = false

[workspace]
members = [
    "bindings/*",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"