[package]
name = "lz-str-py"
version = "0.0.0"
edition = "2021"

[lib]
name = "lz_str_py"
crate-type = [ "cdylib" ]

[dependencies]
lz-str = { path = "../.." }
pyo3 = { version = "0.20.2", features = [ "extension-module", "abi3", "abi3-py37" ] }

[features]
rustc-hash = [
    "lz-str/rustc-hash",
]
