[package]
name = "lz-str-wasm"
version = "0.0.0"
edition = "2021"
description = "A WebAssembly binding for lz-str"
repository = "https://github.com/adumbidiot/lz-str-rs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
js-sys = "0.3.65"
lz-str = { path = "../.." }
wasm-bindgen = "0.2.89"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [ '-O4' ]

[features]
rustc-hash = [
    "lz-str/rustc-hash",
]